2023.03.29:
 * success test "Wemos S2 Mini ESP32" + "E28-2G4M12S"
 * switch SPI to 6MHz for "S2 Mini"

2023.03.28:
 * start USB-CDC for "Wemos S2 Mini" board

2023.03.27:
 * work under USB-CDC for "Wemos S2 Mini" board

2023.03.06:
 * work and debug full FSM
 * debug all FSM modes

2023.03.05:
 * add FSM (afsm.cpp/afsm.h)
 * add TODO file
 * add autostart

2023.03.01:
 * first TFS under Arduino ESP32/ESP8266
 * add `if defined(ESP32)` and `if defined(ESP8266)` to "config.h"
 * debug SX128x reset/wakeup/sleep/stadby
 * maximal SPI stable frequency about 18 MHz for ESP32 + SX128x
 * test GPIO interrupt on ESP32 (DIO1 from SX128x)

2023.02.28:
 * work under TFS for Arduino

2023.02.27:
 * start project
 * add sx128x lib from STM32 project
 * add some code from my ESP32 `hello world` project
 + add README.md
 + add INSTALL.md

