@@ -1,3 +1,4 @@
 - hardware reset SX128x don't work good and stable (sx128x_hw_reset())
 - Advanced Ranging do not work yet
+- Freeze SX1280 under S2 Mini...
 
